# info_spot

./: .gitignore  .prettierrc  Cargo.toml  Dioxus.toml  README.md  rustfmt.toml
assets/compiled/: artist_detail.css  callback.css  dashboard.css  detail.css  home.css  main.css  playlist_detail.css  playlists.css  recently_played.css  toast.css  top.css  top_artists.css  top_tracks.css  track_detail.css  user_profile.css
assets/styling/: artist_detail.scss  callback.scss  dashboard.scss  detail.scss  home.scss  main.scss  playlist_detail.scss  playlists.scss  recently_played.scss  style.scss  toast.scss  top.scss  top_artists.scss  top_tracks.scss  track_detail.scss  user_profile.scss
misc/: DupeTest.json  anime.csv
src/: main.rs  oauth.rs
src/api/: mod.rs  spotify.rs
src/components/: artist_detail.rs  callback.rs  dashboard.rs  home.rs  mod.rs  playlist_detail.rs  playlists.rs  recently_played.rs  toast.rs  top_artists.rs  top_tracks.rs  track_detail.rs  user_profile.rs
src/models/: spotify.rs
src/utils/: helpers.rs  mock_data.rs  mod.rs
src/views/: blog.rs  navbar.rs
