[package]
name = "info_spot"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.2", features = ["desktop", "router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
rand = "0.9.2"
sha2 = "0.10"
open = "5.0"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
